added data source. added py program to get data out. added data to phoneNumber. Ran and did not get any errors

--- a/data/README.ME
+++ b/data/README.ME
@@ -1,2 +1,6 @@
 # README for DATA
 currently placeholder for data to be referenced.
+## Source
+- https://nationalnanpa.com/reports/reports_npa.html (list of area codes and their state)
+- - NpasInSvcByNumRpt
+- https://www.faa.gov/air_traffic/publications/atpubs/cnt_html/appendix_a.html (list of states and territories)
